...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D1b-N6-tsr">
                                            <rect key="frame" x="305" y="0.0" width="50" height="50"/>
                                            <color key="backgroundColor" red="0.16503871065174083" green="0.24144043250437003" blue="0.6086809961928934" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="50" id="fT9-qk-mJC"/>
                                            </constraints>
                                            <state key="normal" title="sample">
                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
                                            <connections>
                                                <action selector="BaseURlSampleTap:" destination="-1" eventType="touchUpInside" id="BDm-VC-L6Q"/>
                                            </connections>
                                        </button>
...
                    <color key="backgroundColor" red="0.096382273996036175" green="0.19494220700553808" blue="0.6086809961928934" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="1Fh-MG-fAC"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="19"/>
                    <size key="titleShadowOffset" width="2" height="2"/>
                    <state key="normal" title="表示">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="titleShadowColor" red="0.40868306640000002" green="0.54019282909999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="ShowAction:" destination="-1" eventType="touchUpInside" id="oNa-16-WQO"/>
                    </connections>
...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVE-3L-5oA">
                            <rect key="frame" x="235" y="0.0" width="108" height="30"/>
                            <color key="backgroundColor" red="0.27546520234881205" green="0.6086809961928934" blue="0.2393549248203079" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="30" id="P8O-NW-Req"/>
                            </constraints>
                            <state key="normal" title="表示の切り替え">
                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            </state>
                            <connections>
                                <action selector="showchangeTap:" destination="-1" eventType="touchUpInside" id="kOE-Gb-Uqb"/>
                            </connections>
                        </button>
...
